syntax = "proto3";

option java_package = "com.example";
option java_multiple_files = true;

message SumRequest {
    int32 a = 1;
    int32 b = 2;
}

message SumResponse {
    int32 result = 1;
}

message DecompositionRequest {
    int32 number = 1;
}

message DecompositionResponse {
    int32 factor = 1;
}

message AverageRequest {
    int32 number = 1;
}

message AverageResponse {
    double result = 1;
}

message MaximumRequest {
    int32 number = 1;
}

message MaximumResponse {
    int32 maximum = 1;
}

message DeadlineRequest {
    int32 number = 1;
}

message DeadlineResponse {
    int32 result = 1;
}

service SumService {
    // Unary
    rpc sum(SumRequest) returns (SumResponse) {};
    // Server streaming
    rpc decompose(DecompositionRequest) returns (stream DecompositionResponse) {};
    // Client streaming
    rpc average(stream AverageRequest) returns (AverageResponse) {};
    // BiDirectional
    rpc maximum(stream MaximumRequest) returns (stream MaximumResponse) {};
    // Unary
    rpc withDeadline(DeadlineRequest) returns (DeadlineResponse) {};
}